# y2noda-mjai-bot

./: .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  pyrightconfig.json  ruff.toml  run_bot.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/tsumogiri/: bot.py
logs/: mjai_log.json  player_logs.0.stderr.txt  player_logs.0.stdout.txt  player_logs.1.stdout.txt  player_logs.2.stdout.txt  player_logs.3.stderr.txt  player_logs.3.stdout.txt  summary.json
scripts/: create_submission.py  simulate.py
src/: bot.py
src/agents/: base_agent.py  drl_agent.py
src/engine/: __init__.py  thinking_engine.py
src/models/: network.py
src/strategies/: __init__.py  base_strategy.py
src/strategies/rule_based/: __init__.py  rule_based_strategy.py
src/training/: trainer.py
terraform/: main.tf  outputs.tf  variables.tf
